# terminal-emoji-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: basic.rs
src/: lib.rs
