[package]
name = "terminal-emoji"
description = "A library for safely displaying emoji inside of terminals"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/SirWindfield/terminal-emoji-rs"
version = "0.2.1"
authors = ["SirWindfield <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
atty = "0.2.14"
lazy_static = "1.4.0"
