[package]
name = "terminal-emoji"
description = "A library for safely displaying emoji inside of terminals"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/SirWindfield/terminal-emoji-rs"
version = "0.4.1"
authors = ["SirWindfield <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.123", optional = true, features = ["derive"] }
terminal-supports-emoji = "0.1.3"
